# parse2fit

./: Ensemble-FF-fit.yml  README.md  pyproject.toml  setup.py
example_yamls/jax-reaxff/: BiSe.yml
examples/: generate_inputs.py
examples/rmg/Bi/: forcefield.xml
examples/rmg/Bi2Se3/: forcefield.xml
examples/rmg/Se/: forcefield.xml
examples/yamls/: fitsnap_rmg.yml  fitsnap_vasp.yml  reaxff_rmg.yml  reaxff_vasp.yml
parse2fit/: generate_parse2fit_cli.py
parse2fit/core/: entries.py  properties.py
parse2fit/example_yamls/conda/: parse2fit.yml
parse2fit/example_yamls/jax-reaxff/: BiSe.yml  small_BiSe.yml
parse2fit/io/: parsers.py  readwrite.py  xml.py
parse2fit/io/defaults/: BiSe.yml  reax_yaml.yml
parse2fit/tools/: fileconverter.py  unitconverter.py  weights.py
