[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parse2fit"
version = "0.1.0"
description = "Framework to parse DFT outputs for FF fitting"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ryan Morelock", email = "rym@ornl.gov" }]
requires-python = ">=3.8"
dependencies = ["numpy", "ase", "pymatgen"]

[project.scripts]
generate_parse2fit = "parse2fit.generate_parse2fit_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["parse2fit", "parse2fit.*"]

